# PhySim

./: .gitignore  CMakeLists.txt  README.md
src/c/: Color.c  Origin.c  PhysicsObject.c  Simulation.c  StepResult.c  Vector2.c
src/c/h/: Color.h  Origin.h  PhysicsObject.h  Simulation.h  StepResult.h  Vector2.h
src/c/objects/: PhysicsObject.c
src/c/units/: Distance.c  Mass.c  Time.c
src/h/: Color.h  Distance.h  Mass.h  PhysicsObject.h  Simulation.h  StepResult.h  Time.h  Vector2.h
